assignment4/y.output
Terminals unused in grammar

   STRUCT
   TYPEDEF
   UNION
   ENUMERATION_CONSTANT
   SINGLE_LINE_COMMENT
   MULT_LINE_COMMENT


State 325 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

    6 declaration_list_opt: declaration_list
    7                     | %empty

    8 declaration_list: declaration
    9                 | declaration_list declaration

   10 statement: labeled_statement
   11          | compound_statement
   12          | expression_statement
   13          | selection_statement
   14          | iteration_statement
   15          | jump_statement

   16 labeled_statement: IDENTIFIER ':' statement
   17                  | CASE constant_expression ':' statement
   18                  | DEFAULT ':' statement

   19 compound_statement: '{' block_item_list_opt '}'

   20 block_item_list_opt: block_item_list
   21                    | %empty

   22 block_item_list: block_item
   23                | block_item_list block_item

   24 block_item: declaration
   25           | statement

   26 expression_statement: expression_opt ';'

   27 expression_opt: expression
   28               | %empty

   29 selection_statement: IF '(' expression ')' statement ELSE statement
   30                    | IF '(' expression ')' statement
   31                    | SWITCH '(' expression ')' statement

   32 iteration_statement: WHILE '(' expression ')' statement
   33                    | DO statement WHILE '(' expression ')' ';'
   34                    | FOR '(' expression_opt ';' expression_opt ';' expression_opt ')' statement
   35                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

   36 jump_statement: GOTO IDENTIFIER ';'
   37               | CONTINUE ';'
   38               | BREAK ';'
   39               | RETURN expression_opt ';'

   40 declaration: declaration_specifiers init_declarator_list_opt ';'

   41 init_declarator_list_opt: init_declarator_list
   42                         | %empty

   43 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   44                       | type_specifier declaration_specifiers_opt
   45                       | type_qualifier declaration_specifiers_opt
   46                       | function_specifier declaration_specifiers_opt

   47 declaration_specifiers_opt: declaration_specifiers
   48                           | %empty

   49 init_declarator_list: init_declarator
   50                     | init_declarator_list ',' init_declarator

   51 init_declarator: declarator
   52                | declarator ASSIGN_OP initializer

   53 storage_class_specifier: EXTERN
   54                        | STATIC
   55                        | AUTO
   56                        | REGISTER

   57 type_specifier: VOID
   58               | CHAR
   59               | SHORT
   60               | INT
   61               | LONG
   62               | FLOAT
   63               | DOUBLE
   64               | SIGNED
   65               | UNSIGNED
   66               | BOOL
   67               | COMPLEX
   68               | IMAGINARY
   69               | enum_specifier

   70 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
   71                         | type_qualifier specifier_qualifier_list_opt

   72 specifier_qualifier_list_opt: specifier_qualifier_list
   73                             | %empty

   74 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
   75               | ENUM identifier_opt '{' enumerator_list ',' '}'
   76               | ENUM IDENTIFIER

   77 identifier_opt: IDENTIFIER
   78               | %empty

   79 enumerator_list: enumerator
   80                | enumerator_list ',' enumerator

   81 enumerator: enumeration_constant
   82           | enumeration_constant ASSIGN_OP constant_expression

   83 type_qualifier: CONST
   84               | RESTRICT
   85               | VOLATILE

   86 function_specifier: INLINE

   87 declarator: pointer_opt direct_declarator

   88 pointer_opt: pointer
   89            | %empty

   90 direct_declarator: IDENTIFIER
   91                  | '(' declarator ')'
   92                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
   93                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
   94                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
   95                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
   96                  | direct_declarator '(' parameter_type_list ')'
   97                  | direct_declarator '(' identifier_list_opt ')'

   98 type_qualifier_list_opt: type_qualifier_list
   99                        | %empty

  100 assignment_expression_opt: assignment_expression
  101                          | %empty

  102 identifier_list_opt: identifier_list
  103                    | %empty

  104 pointer: '*' type_qualifier_list_opt
  105        | '*' type_qualifier_list_opt pointer

  106 type_qualifier_list: type_qualifier
  107                    | type_qualifier_list type_qualifier

  108 parameter_type_list: parameter_list
  109                    | parameter_list ',' ELLIPSIS

  110 parameter_list: parameter_declaration
  111               | parameter_list ',' parameter_declaration

  112 parameter_declaration: declaration_specifiers declarator
  113                      | declaration_specifiers

  114 identifier_list: IDENTIFIER
  115                | identifier_list ',' IDENTIFIER

  116 type_name: specifier_qualifier_list

  117 initializer: assignment_expression
  118            | '{' initializer_list '}'
  119            | '{' initializer_list ',' '}'

  120 initializer_list: designation_opt initializer
  121                 | initializer_list ',' designation_opt initializer

  122 designation_opt: designation
  123                | %empty

  124 designation: designator_list ASSIGN_OP

  125 designator_list: designator
  126                | designator_list designator

  127 designator: '[' constant_expression ']'
  128           | '.' IDENTIFIER

  129 expression: assignment_expression
  130           | expression ',' assignment_expression

  131 constant_expression: conditional_expression

  132 assignment_expression: conditional_expression
  133                      | unary_expression assignment_operator assignment_expression

  134 assignment_operator: ASSIGN_OP
  135                    | MULT_ASSIGN
  136                    | DIV_ASSIGN
  137                    | MOD_ASSIGN
  138                    | SUM_ASSIGN
  139                    | SUBTRACT_ASSIGN
  140                    | LEFT_ASSIGN
  141                    | RIGHT_ASSIGN
  142                    | AND_ASSIGN
  143                    | XOR_ASSIGN
  144                    | OR_ASSIGN

  145 conditional_expression: logical_OR_expression
  146                       | logical_OR_expression '?' expression ':' conditional_expression

  147 logical_OR_expression: logical_AND_expression
  148                      | logical_OR_expression OR_OP logical_AND_expression

  149 logical_AND_expression: inclusive_OR_expression
  150                       | logical_AND_expression AND_OP inclusive_OR_expression

  151 inclusive_OR_expression: exclusive_OR_expression
  152                        | inclusive_OR_expression '|' exclusive_OR_expression

  153 exclusive_OR_expression: AND_expression
  154                        | exclusive_OR_expression '^' AND_expression

  155 AND_expression: equality_expression
  156               | AND_expression '&' equality_expression

  157 equality_expression: relational_expression
  158                    | equality_expression EQUALS_TO relational_expression
  159                    | equality_expression NOT_EQUALS_TO relational_expression

  160 relational_expression: shift_expression
  161                      | relational_expression '<' shift_expression
  162                      | relational_expression '>' shift_expression
  163                      | relational_expression LESS_THAN_EQUAL_TO shift_expression
  164                      | relational_expression GREATER_THAN_EQUAL_TO shift_expression

  165 shift_expression: additive_expression
  166                 | shift_expression LEFT_SHIFT_OP additive_expression
  167                 | shift_expression RIGHT_SHIFT_OP additive_expression

  168 additive_expression: multiplicative_expression
  169                    | additive_expression '+' multiplicative_expression
  170                    | additive_expression '-' multiplicative_expression

  171 multiplicative_expression: cast_expression
  172                          | multiplicative_expression '*' cast_expression
  173                          | multiplicative_expression '/' cast_expression
  174                          | multiplicative_expression '%' cast_expression

  175 cast_expression: unary_expression
  176                | '(' type_name ')' cast_expression

  177 unary_operator: '&'
  178               | '*'
  179               | '+'
  180               | '-'
  181               | '~'
  182               | '!'

  183 unary_expression: postfix_expression
  184                 | INCREMENT unary_expression
  185                 | DECREMENT unary_expression
  186                 | unary_operator cast_expression
  187                 | SIZEOF unary_expression
  188                 | SIZEOF '(' type_name ')'

  189 argument_expression_list_opt: argument_expression_list
  190                             | %empty

  191 argument_expression_list: assignment_expression
  192                         | argument_expression_list ',' assignment_expression

  193 postfix_expression: primary_expression
  194                   | postfix_expression '[' expression ']'
  195                   | postfix_expression '(' argument_expression_list_opt ')'
  196                   | postfix_expression '.' IDENTIFIER
  197                   | postfix_expression POINTER IDENTIFIER
  198                   | postfix_expression INCREMENT
  199                   | postfix_expression DECREMENT
  200                   | '(' type_name ')' '{' initializer_list '}'
  201                   | '(' type_name ')' '{' initializer_list ',' '}'

  202 primary_expression: IDENTIFIER
  203                   | constant
  204                   | STRING_LITERAL
  205                   | '(' expression ')'

  206 constant: INTEGER_CONSTANT
  207         | FLOATING_CONSTANT
  208         | CHARACTER_CONSTANT

  209 enumeration_constant: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 182
'%' (37) 174
'&' (38) 156 177
'(' (40) 29 30 31 32 33 34 35 91 96 97 176 188 195 200 201 205
')' (41) 29 30 31 32 33 34 35 91 96 97 176 188 195 200 201 205
'*' (42) 95 104 105 172 178
'+' (43) 169 179
',' (44) 50 75 80 109 111 115 119 121 130 192 201
'-' (45) 170 180
'.' (46) 128 196
'/' (47) 173
':' (58) 16 17 18 146
';' (59) 26 33 34 35 36 37 38 39 40
'<' (60) 161
'>' (62) 162
'?' (63) 146
'[' (91) 92 93 94 95 127 194
']' (93) 92 93 94 95 127 194
'^' (94) 154
'{' (123) 19 74 75 118 119 200 201
'|' (124) 152
'}' (125) 19 74 75 118 119 200 201
'~' (126) 181
error (256)
AUTO (258) 55
BREAK (259) 38
CASE (260) 17
CHAR (261) 58
CONST (262) 83
CONTINUE (263) 37
DEFAULT (264) 18
DO (265) 33
DOUBLE (266) 63
ELSE (267) 29
ENUM (268) 74 75 76
EXTERN (269) 53
FLOAT (270) 62
FOR (271) 34 35
GOTO (272) 36
IF (273) 29 30
INLINE (274) 86
INT (275) 60
LONG (276) 61
REGISTER (277) 56
RESTRICT (278) 84
RETURN (279) 39
SHORT (280) 59
SIGNED (281) 64
SIZEOF (282) 187 188
STATIC (283) 54 93 94
STRUCT (284)
SWITCH (285) 31
TYPEDEF (286)
UNION (287)
UNSIGNED (288) 65
VOID (289) 57
VOLATILE (290) 85
WHILE (291) 32 33
BOOL (292) 66
COMPLEX (293) 67
IMAGINARY (294) 68
IDENTIFIER (295) 16 36 76 77 90 114 115 128 196 197 202 209
INTEGER_CONSTANT (296) 206
FLOATING_CONSTANT (297) 207
ENUMERATION_CONSTANT (298)
CHARACTER_CONSTANT (299) 208
STRING_LITERAL (300) 204
POINTER (301) 197
INCREMENT (302) 184 198
DECREMENT (303) 185 199
LEFT_SHIFT_OP (304) 166
RIGHT_SHIFT_OP (305) 167
LESS_THAN_EQUAL_TO (306) 163
GREATER_THAN_EQUAL_TO (307) 164
EQUALS_TO (308) 158
NOT_EQUALS_TO (309) 159
AND_OP (310) 150
OR_OP (311) 148
ELLIPSIS (312) 109
ASSIGN_OP (313) 52 82 124 134
MULT_ASSIGN (314) 135
DIV_ASSIGN (315) 136
MOD_ASSIGN (316) 137
SUM_ASSIGN (317) 138
SUBTRACT_ASSIGN (318) 139
LEFT_ASSIGN (319) 140
RIGHT_ASSIGN (320) 141
AND_ASSIGN (321) 142
XOR_ASSIGN (322) 143
OR_ASSIGN (323) 144
SINGLE_LINE_COMMENT (324)
MULT_LINE_COMMENT (325)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
translation_unit (95)
    on left: 1 2, on right: 0 2
external_declaration (96)
    on left: 3 4, on right: 1 2
function_definition (97)
    on left: 5, on right: 3
declaration_list_opt (98)
    on left: 6 7, on right: 5
declaration_list (99)
    on left: 8 9, on right: 6 9
statement (100)
    on left: 10 11 12 13 14 15, on right: 16 17 18 25 29 30 31 32 33
    34 35
labeled_statement (101)
    on left: 16 17 18, on right: 10
compound_statement (102)
    on left: 19, on right: 5 11
block_item_list_opt (103)
    on left: 20 21, on right: 19
block_item_list (104)
    on left: 22 23, on right: 20 23
block_item (105)
    on left: 24 25, on right: 22 23
expression_statement (106)
    on left: 26, on right: 12
expression_opt (107)
    on left: 27 28, on right: 26 34 35 39
selection_statement (108)
    on left: 29 30 31, on right: 13
iteration_statement (109)
    on left: 32 33 34 35, on right: 14
jump_statement (110)
    on left: 36 37 38 39, on right: 15
declaration (111)
    on left: 40, on right: 4 8 9 24 35
init_declarator_list_opt (112)
    on left: 41 42, on right: 40
declaration_specifiers (113)
    on left: 43 44 45 46, on right: 5 40 47 112 113
declaration_specifiers_opt (114)
    on left: 47 48, on right: 43 44 45 46
init_declarator_list (115)
    on left: 49 50, on right: 41 50
init_declarator (116)
    on left: 51 52, on right: 49 50
storage_class_specifier (117)
    on left: 53 54 55 56, on right: 43
type_specifier (118)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69, on right: 44 70
specifier_qualifier_list (119)
    on left: 70 71, on right: 72 116
specifier_qualifier_list_opt (120)
    on left: 72 73, on right: 70 71
enum_specifier (121)
    on left: 74 75 76, on right: 69
identifier_opt (122)
    on left: 77 78, on right: 74 75
enumerator_list (123)
    on left: 79 80, on right: 74 75 80
enumerator (124)
    on left: 81 82, on right: 79 80
type_qualifier (125)
    on left: 83 84 85, on right: 45 71 106 107
function_specifier (126)
    on left: 86, on right: 46
declarator (127)
    on left: 87, on right: 5 51 52 91 112
pointer_opt (128)
    on left: 88 89, on right: 87
direct_declarator (129)
    on left: 90 91 92 93 94 95 96 97, on right: 87 92 93 94 95 96 97
type_qualifier_list_opt (130)
    on left: 98 99, on right: 92 93 95 104 105
assignment_expression_opt (131)
    on left: 100 101, on right: 92
identifier_list_opt (132)
    on left: 102 103, on right: 97
pointer (133)
    on left: 104 105, on right: 88 105
type_qualifier_list (134)
    on left: 106 107, on right: 94 98 107
parameter_type_list (135)
    on left: 108 109, on right: 96
parameter_list (136)
    on left: 110 111, on right: 108 109 111
parameter_declaration (137)
    on left: 112 113, on right: 110 111
identifier_list (138)
    on left: 114 115, on right: 102 115
type_name (139)
    on left: 116, on right: 176 188 200 201
initializer (140)
    on left: 117 118 119, on right: 52 120 121
initializer_list (141)
    on left: 120 121, on right: 118 119 121 200 201
designation_opt (142)
    on left: 122 123, on right: 120 121
designation (143)
    on left: 124, on right: 122
designator_list (144)
    on left: 125 126, on right: 124 126
designator (145)
    on left: 127 128, on right: 125 126
expression (146)
    on left: 129 130, on right: 27 29 30 31 32 33 130 146 194 205
constant_expression (147)
    on left: 131, on right: 17 82 127
assignment_expression (148)
    on left: 132 133, on right: 93 94 100 117 129 130 133 191 192
assignment_operator (149)
    on left: 134 135 136 137 138 139 140 141 142 143 144, on right:
    133
conditional_expression (150)
    on left: 145 146, on right: 131 132 146
logical_OR_expression (151)
    on left: 147 148, on right: 145 146 148
logical_AND_expression (152)
    on left: 149 150, on right: 147 148 150
inclusive_OR_expression (153)
    on left: 151 152, on right: 149 150 152
exclusive_OR_expression (154)
    on left: 153 154, on right: 151 152 154
AND_expression (155)
    on left: 155 156, on right: 153 154 156
equality_expression (156)
    on left: 157 158 159, on right: 155 156 158 159
relational_expression (157)
    on left: 160 161 162 163 164, on right: 157 158 159 161 162 163
    164
shift_expression (158)
    on left: 165 166 167, on right: 160 161 162 163 164 166 167
additive_expression (159)
    on left: 168 169 170, on right: 165 166 167 169 170
multiplicative_expression (160)
    on left: 171 172 173 174, on right: 168 169 170 172 173 174
cast_expression (161)
    on left: 175 176, on right: 171 172 173 174 176 186
unary_operator (162)
    on left: 177 178 179 180 181 182, on right: 186
unary_expression (163)
    on left: 183 184 185 186 187 188, on right: 133 175 184 185 187
argument_expression_list_opt (164)
    on left: 189 190, on right: 195
argument_expression_list (165)
    on left: 191 192, on right: 189 192
postfix_expression (166)
    on left: 193 194 195 196 197 198 199 200 201, on right: 183 194
    195 196 197 198 199
primary_expression (167)
    on left: 202 203 204 205, on right: 193
constant (168)
    on left: 206 207 208, on right: 203
enumeration_constant (169)
    on left: 209, on right: 81 82


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 1

   55 storage_class_specifier: AUTO .

    $default  reduce using rule 55 (storage_class_specifier)


State 2

   58 type_specifier: CHAR .

    $default  reduce using rule 58 (type_specifier)


State 3

   83 type_qualifier: CONST .

    $default  reduce using rule 83 (type_qualifier)


State 4

   63 type_specifier: DOUBLE .

    $default  reduce using rule 63 (type_specifier)


State 5

   74 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
   75               | ENUM . identifier_opt '{' enumerator_list ',' '}'
   76               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 78 (identifier_opt)

    identifier_opt  go to state 33


State 6

   53 storage_class_specifier: EXTERN .

    $default  reduce using rule 53 (storage_class_specifier)


State 7

   62 type_specifier: FLOAT .

    $default  reduce using rule 62 (type_specifier)


State 8

   86 function_specifier: INLINE .

    $default  reduce using rule 86 (function_specifier)


State 9

   60 type_specifier: INT .

    $default  reduce using rule 60 (type_specifier)


State 10

   61 type_specifier: LONG .

    $default  reduce using rule 61 (type_specifier)


State 11

   56 storage_class_specifier: REGISTER .

    $default  reduce using rule 56 (storage_class_specifier)


State 12

   84 type_qualifier: RESTRICT .

    $default  reduce using rule 84 (type_qualifier)


State 13

   59 type_specifier: SHORT .

    $default  reduce using rule 59 (type_specifier)


State 14

   64 type_specifier: SIGNED .

    $default  reduce using rule 64 (type_specifier)


State 15

   54 storage_class_specifier: STATIC .

    $default  reduce using rule 54 (storage_class_specifier)


State 16

   65 type_specifier: UNSIGNED .

    $default  reduce using rule 65 (type_specifier)


State 17

   57 type_specifier: VOID .

    $default  reduce using rule 57 (type_specifier)


State 18

   85 type_qualifier: VOLATILE .

    $default  reduce using rule 85 (type_qualifier)


State 19

   66 type_specifier: BOOL .

    $default  reduce using rule 66 (type_specifier)


State 20

   67 type_specifier: COMPLEX .

    $default  reduce using rule 67 (type_specifier)


State 21

   68 type_specifier: IMAGINARY .

    $default  reduce using rule 68 (type_specifier)


State 22

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 34
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    external_declaration     go to state 35
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 23

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 24

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 25

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 26

    5 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement
   40 declaration: declaration_specifiers . init_declarator_list_opt ';'

    '*'  shift, and go to state 36

    ';'       reduce using rule 42 (init_declarator_list_opt)
    $default  reduce using rule 89 (pointer_opt)

    init_declarator_list_opt  go to state 37
    init_declarator_list      go to state 38
    init_declarator           go to state 39
    declarator                go to state 40
    pointer_opt               go to state 41
    pointer                   go to state 42


State 27

   43 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 48 (declaration_specifiers_opt)
